// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Page Should render errors on fail 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <div
          class="navbar-brand text-primary font-weight-bold"
        >
          C0D3
        </div>
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="text-center navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="m-auto navbar-nav"
        >
          <a
            class="nav-item nav-link"
            href="/curriculum"
          >
            Curriculum
          </a>
          <a
            class="nav-item nav-link"
            href="https://github.com/garageScript/c0d3-app"
            rel="noopener noreferrer"
            target="_blank"
          >
            Repo
          </a>
          <a
            class="nav-item nav-link"
            href="/docs/learn"
          >
            Learn
          </a>
          <a
            class="nav-item nav-link"
            href="https://discord.gg/c0d3"
            rel="noopener noreferrer"
            target="_blank"
          >
            Community
          </a>
        </div>
        <div
          class="nav-buttons"
        >
          <a
            class="btn btn-secondary border m-2 mr-lg-3 bg-light"
            href="/login"
          >
            Login
          </a>
          <a
            class="btn btn-secondary border m-2 mr-lg-3 bg-light"
            href="/signup"
          >
            Signup
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row mt-5"
    >
      <div
        class="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
      >
        <div
          class="card-body text-center pt-5 pb-5"
        >
          <h1
            class="card-title h2 font-weight-bold mb-5"
          >
            Create Account
          </h1>
          <p
            class="card-text"
          />
          <div
            class="bg-light m-auto px-5 border-0"
            data-testid="error-message"
          >
            <h5
              class="text-danger"
            >
               Server cannot be reached. Please try again. If this problem persists, please send an email to support@c0d3.com
            </h5>
          </div>
          <form
            action="#"
            data-testid="form"
          >
            <div
              class="form-group "
            >
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="email"
                name="email"
                placeholder="Email address"
                type="email"
                value="fake@email.com"
              />
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="username"
                name="username"
                placeholder="Username"
                value="fakeusername"
              />
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="firstName"
                name="firstName"
                placeholder="First name"
                value="fakefirstname"
              />
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="lastName"
                name="lastName"
                placeholder="Last name"
                value="fakelastname"
              />
              <button
                class="btn btn-primary btn-lg btn-block mb-3"
                data-testid="submit"
                type="submit"
              >
                Create Account
              </button>
            </div>
          </form>
          <p
            class="text-black-50"
          >
            Already have an account?
             
            <a
              class="text-primary"
              href="/login"
            >
              Login
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2021 GarageScript
  </footer>
</div>
`;

exports[`Signup Page Should render success component on success 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <div
          class="navbar-brand text-primary font-weight-bold"
        >
          C0D3
        </div>
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="text-center navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="m-auto navbar-nav"
        >
          <a
            class="nav-item nav-link"
            href="/curriculum"
          >
            Curriculum
          </a>
          <a
            class="nav-item nav-link"
            href="https://github.com/garageScript/c0d3-app"
            rel="noopener noreferrer"
            target="_blank"
          >
            Repo
          </a>
          <a
            class="nav-item nav-link"
            href="/docs/learn"
          >
            Learn
          </a>
          <a
            class="nav-item nav-link"
            href="https://discord.gg/c0d3"
            rel="noopener noreferrer"
            target="_blank"
          >
            Community
          </a>
        </div>
        <div
          class="nav-buttons"
        >
          <a
            class="btn btn-secondary border m-2 mr-lg-3 bg-light"
            href="/login"
          >
            Login
          </a>
          <a
            class="btn btn-secondary border m-2 mr-lg-3 bg-light"
            href="/signup"
          >
            Signup
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="container-md"
  >
    <div
      class="row mt-5"
    >
      <div
        class="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
      >
        <div
          class="card-body text-center pt-5 pb-5"
        >
          <img
            alt="Green circle with a checkmark inside."
            class="mb-4"
            height="100px"
            src="/assets/curriculum/icons/checked.svg"
            width="100px"
          />
          <h1
            class="card-title h2 font-weight-bold mb-5"
          >
            Account created successfully!
          </h1>
          <p
            class="card-text"
          />
          <a
            class="btn btn-primary"
            href="/confirm/undefined"
          >
            Click here to set your password.
          </a>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2021 GarageScript
  </footer>
</div>
`;
